--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "^6.3.4",
+    "@segment/analytics-react-native": "^2.9.1",
+    "@segment/sovran-react-native": "^0.4.5",
     "@twotalltotems/react-native-otp-input": "^1.3.11",
     "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "0.27.2",
