--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^14.0.0",
+    "react-native-otp": "^1.0.0",
     "react-native-phone-input": "^1.3.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-pie": "^1.1.2",
